[package]
name = "sqlxinsert"
version = "0.6.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"
license = "MIT"
description = "Sqlx derive macro for simpler inserts"
repository = "https://github.com/fbucek/sqlxinsert"
readme = "README.md"
exclude = [".github/*"]

[features]
default = ["sqlite"]
sqlite = []
postgres = ["sqlx/postgres"]

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0"
quote = "1.0"
syn = "1.0"
async-trait = "0.1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }

[dev-dependencies]
tokio = { version = "1.19", features= ["rt-multi-thread",  "macros"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "sqlite"] }
